tests/src/frontend/typechecking/invalid/invalid_tparam_match_5.sk
fun no<V>(x: V): Nullable<Int> {
  x match {
  | Int _ -> Null()
  }
}
